Stylesheet/emote/tag updates 2016-01-05

--- a/source-css/coloratura.css
+++ b/source-css/coloratura.css
@@ -554,6 +554,16 @@ a[href|="/rarajackhug"] {
   background-image: url(%%raramotes100%%) !important;
 }
 
+a[href|="/raratrotting"] {
+  display: block;
+  clear: none;
+  float: left;
+  width: 110px;
+  height: 100px;
+  cursor: default;
+  background-image: url(%%raratrotting%%) !important;
+}
+
 START-PONYSCRIPT-IGNORE { color: red; }
 
 a[href|="/mirrorportal"] {
