--- a/source-css/sonatadusk.css
+++ b/source-css/sonatadusk.css
@@ -75,9 +75,9 @@
 body { background: url(%%background%%) no-repeat center }
 body.wiki-page { background: none }
 
-/*START-TACOS{color:red}
-body { background: url(%%tuesdaybackground%%) no-repeat fixed center bottom }
-END-TACOS{color:red}*/
+START-TACOS{color:red}
+body { background: url(%%flyingtuesday%%) no-repeat fixed center bottom }
+END-TACOS{color:red}
 
 .subscribers .word, .users-online .word { display: none }
 .subscribers .number:after { content: " admirers" }
