--- a/source-css/clopclop.css
+++ b/source-css/clopclop.css
@@ -26,6 +26,10 @@
             border-left: 1px dotted #999}
         .side .md > h3{
             text-align: center}
+        .side .md p {
+            text-align: justify;
+            margin-left: 15px;
+            margin-right: 15px}
 
 /* Submission page */
     /* Help text 1 */
